# mcp-rust-sdk

./: Cargo.toml
.github/workflows/: conformance.yml
crates/rmcp/: CHANGELOG.md
crates/rmcp/src/: service.rs
crates/rmcp/src/transport/: auth.rs  streamable_http_client.rs
crates/rmcp/src/transport/common/reqwest/: streamable_http_client.rs
crates/rmcp/tests/: test_cancelled_response.rs
