[workspace]
members = ["crates/rmcp", "crates/rmcp-macros", "examples/*", "conformance"]
default-members = ["crates/rmcp", "crates/rmcp-macros"]
resolver = "2"

[workspace.dependencies]
rmcp = { version = "2.2.0", path = "./crates/rmcp" }
rmcp-macros = { version = "2.2.0", path = "./crates/rmcp-macros" }

[workspace.package]
edition = "2024"
version = "2.2.0"
authors = ["4t145 <u4t145@163.com>"]
license = "Apache-2.0"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for Model Context Protocol"
keywords = ["mcp", "sdk", "tokio", "modelcontextprotocol"]
homepage = "https://github.com/modelcontextprotocol/rust-sdk"
categories = [
    "network-programming",
    "asynchronous",
]
readme = "README.md"
